--- a/src/components/Ingredients/Search.css
+++ b/src/components/Ingredients/Search.css
@@ -20,7 +20,7 @@
 
 .search-input input:focus {
   outline: none;
-  border-color: #ff2058;
+  border-color: #007f90;
 }
 
 @media (min-width: 768px) {
