do some new things

--- a/src/components/Counter/styles.module.scss
+++ b/src/components/Counter/styles.module.scss
@@ -16,6 +16,12 @@
   color: #0b7855
 }
 
+.countBtn {
+  background: #f52257;
+  border: 1px solid #f57694;
+  color: #ffffff
+}
+
 .value {
 	color: #f52257;
 	background: #f3f3f3;
