--- a/src/components/Auth.css
+++ b/src/components/Auth.css
@@ -4,3 +4,14 @@
   max-width: 80%;
   text-align: center;
 }
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 280px;
+  align-items: center;
+  margin: auto;
+  gap: 10px;
+}
+input {
+  height: 30px;
+}
