--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,12 @@
 .header {
 	background: #ff2058;
 	width: 100%;
-	padding: 20px 0;
+	padding: 10px 1rem;
+
 }
 .wrapper {
 	margin : 0 auto;
-	max-width: 960px;
+  	max-width: 40rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
